--- a/HomeBrewery/src/App.css
+++ b/HomeBrewery/src/App.css
@@ -1,42 +1,88 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.navbar{
+  display:flex;
+  flex-direction:row;
+  align-items: center;
+  height: 100px;
+  background-color: #e5b05c;
+  width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navbar > img {
+  height: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-items {
+  display:flex;
+  flex-direction:row;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  gap: 2rem;
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.nav-items > .item {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  height: 100%;
 }
 
-.card {
-  padding: 2em;
+.navbar > img:hover {
+  background-color: #ddb771;
+}
+.nav-items > .item:hover {
+  background-color: #e2aa50;
 }
 
-.read-the-docs {
-  color: #888;
+.telo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+h1 {
+  color: white;
+}
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+
+}
+
+.parent > * {
+  background-color: #08a045;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 20px;
+  color: white;
+}
+  
+.div1 { grid-area: 1 / 1 / 3 / 4; }
+.div2 { grid-area: 3 / 1 / 5 / 2; }
+.div3 { grid-area: 3 / 2 / 5 / 4; }
+
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #073b3a;
+  color: #ddb771;
+  position: absolute;
+  bottom: 0;
+  height: 100px;
+}
+
+
+body {
+  background-color: #0b6e4f;
+  margin: 0;
+  padding: 0;
 }
