--- a/HomeBrewery/src/css/telo.css
+++ b/HomeBrewery/src/css/telo.css
@@ -7,27 +7,6 @@
     color: white;
   }
   
-  .grid-home {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-  
-  }
-  
-  .grid-home > * {
-    background-color: #08a045;
-    margin: 2rem;
-    padding: 30px;
-    border-radius: 20px;
-    color: white;
-  }
-    
-  .grid1 { grid-area: 1 / 1 / 3 / 4; }
-  .grid2 { grid-area: 3 / 1 / 5 / 2; }
-  .grid3 { grid-area: 3 / 2 / 5 / 4; }
-  
   .home-container {
     width: 90%;
     display: flex;
@@ -43,6 +22,38 @@
   
   }
 
+.koraki {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+  .section {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    background-color: #08a045;
+    margin: 2rem;
+    padding: 20px;
+    border-radius: 20px;
+    color: white;
+    letter-spacing: .15em;
+    
+    width: 100%;
+  }
+
+  .koraki > * {
+    margin: 2rem;
+  }
+  
+  .section.animate {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+p{
+  font-size: 20px;
+}
 
 .carousel-container {
     margin: 2rem;
