--- a/HomeBrewery/src/css/profil.css
+++ b/HomeBrewery/src/css/profil.css
@@ -30,15 +30,28 @@
     display: flex;
     gap: 3rem;
     justify-content: center;
+    margin: 2rem;
 }
 
 .moji-recepti > .recept {
     background-color: #faedcd;
     padding: 2rem;
     box-shadow: 0.1rem 0.1rem 1.5rem rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+}
+
+.false {
+    min-width: 25rem;
+}
+
+.true {
+    display:flex;
+    flex-grow: 1;
+
 }
 
 button {
-    width: 100%;
+    width: 80%;
     margin: 2rem;
 }
