--- a/HomeBrewery/src/css/footer.css
+++ b/HomeBrewery/src/css/footer.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #073b3a;
-    color: #ddb771;
+    background-color: #d4a373;
+    color: #fefae0;
     bottom: 0;
     height: 100px;
-    position: absolute;
+    
   }
