--- a/HomeBrewery/src/css/telo.css
+++ b/HomeBrewery/src/css/telo.css
@@ -14,12 +14,12 @@
   }
   
   .top-div {
-    background-color: #08a045;
+    background-color: #faedcd;
     margin: 2rem;
     padding: 20px;
     border-radius: 20px;
     color: white;
-  
+    box-shadow: rgba(0,0,0,0.4) 0 0 10px;
   }
 
 .koraki {
@@ -32,13 +32,13 @@
     opacity: 0;
     transform: translateY(50px);
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-    background-color: #08a045;
+    background-color: #faedcd;
     margin: 2rem;
     padding: 20px;
     border-radius: 20px;
     color: white;
     letter-spacing: .15em;
-    
+    box-shadow: rgba(0,0,0,0.4) 0 0 10px;
     width: 100%;
   }
 
