--- a/HomeBrewery/src/css/globalDark.css
+++ b/HomeBrewery/src/css/globalDark.css
@@ -4,7 +4,7 @@ body.dark-mode {
 }
 
 body.dark-mode header {
-    background-color: #14101000;
+    background-color: #c90404;
 }
 
 body.dark-mode .dropdown-menu {
