--- a/HomeBrewery/src/css/NewPostForm.css
+++ b/HomeBrewery/src/css/NewPostForm.css
@@ -6,6 +6,7 @@
     padding: 20px;
     max-width: 600px;
     margin: 0 auto;
+    margin-top: 100px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
