--- a/HomeBrewery/src/css/global.css
+++ b/HomeBrewery/src/css/global.css
@@ -14,3 +14,31 @@ html, body {
     min-height: 100vh;
     width: 100%;
 }
+/* 
+body.dark-mode {
+    background-color: #3e3636;
+    color: #e0e0e0;
+}
+
+body.dark-mode header {
+    background-color: #1e1e1e;
+}
+
+body.dark-mode .dropdown-menu {
+    background-color: #2e2b2b;
+    color: #e0e0e0;
+}
+
+body.dark-mode .dropdown-menu a, 
+body.dark-mode .dropdown-menu div {
+    color: #e0e0e0;
+}
+
+body.dark-mode .dropdown-menu a:hover, 
+body.dark-mode .dropdown-menu div:hover {
+    background-color: rgba(248, 192, 88, 0.4);
+}
+
+body.dark-mode .dropdown-menu .profile-banner {
+    background-color: rgba(248, 192, 88, 0.4);
+} */
