--- a/HomeBrewery/src/css/globalDark.css
+++ b/HomeBrewery/src/css/globalDark.css
@@ -57,3 +57,75 @@ body.dark-mode .containerr {
 body.dark-mode .contentt {
     background-color: #333;
 }
+
+body.dark-mode .containerPost {
+    background-color: #3e3636;
+    color: #e0e0e0;
+}
+
+body.dark-mode .contentPost {
+    background-color: #2b2b2b;
+}
+
+body.dark-mode .post-container {
+    background-color: #444;
+    border: 1px solid #333;
+}
+
+body.dark-mode .vote .score {
+    color: #e0e0e0;
+}
+
+body.dark-mode .post-title {
+    color: #f4f4f4;
+}
+
+body.dark-mode .post-meta {
+    color: #ccc;
+}
+
+body.dark-mode .post-body {
+    color: #ccc;
+}
+
+body.dark-mode .comments-section {
+    background-color: #444;
+    border: 1px solid #333;
+    color: #e0e0e0;
+}
+
+body.dark-mode .comments-count {
+    color: #f8c058;
+}
+
+body.dark-mode .comments-section h2 {
+    color: #f8c058;
+}
+
+body.dark-mode .comment-user span {
+    color: #e0e0e0;
+}
+
+body.dark-mode .comment-content {
+    background-color: #333;
+    color: #ccc;
+}
+
+body.dark-mode .comment p {
+    color: #ccc;
+}
+
+body.dark-mode .replies {
+    border-left: 1px solid #333;
+}
+
+body.dark-mode .comment-form textarea {
+    background-color: #2e2b2b;
+    color: #e0e0e0;
+    border: 1px solid #444;
+}
+
+body.dark-mode .comment-form button {
+    background-color: #f8c058;
+    color: #fff;
+}
